<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userP_img_profilePhoto"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_profile"
            android:layout_width="100dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/userP_txt_nombre"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_below="@+id/userP_img_profilePhoto"
            android:layout_alignParentBottom="true"
            android:text="@string/nombre"
            android:textAlignment="center" />
        <Button
            android:id="@+id/userP_btn_multiuso"
            android:text="@string/follow"
            android:layout_toRightOf="@+id/userP_img_profilePhoto"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:gravity="center"
            android:layout_toRightOf="@+id/userP_img_profilePhoto"
            android:layout_above="@+id/userP_btn_multiuso"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userP_txt_posts"
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userP_txt_seguidores"
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/seguidores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userP_txt_siguiendo"
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/siguiendo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userP_rv_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>