<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingEnd="10dp"
    android:paddingStart="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/exploreD_img_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ph_user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/exploreD_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:text="@string/ph_title_username"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/exploreD_img_user"
        app:layout_constraintStart_toEndOf="@id/exploreD_img_user"
        app:layout_constraintTop_toTopOf="@id/exploreD_img_user"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/exploreD_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/ph_subtitle_user"
        app:layout_constraintStart_toStartOf="@id/exploreD_txt_username"
        app:layout_constraintTop_toBottomOf="@id/exploreD_txt_username" />

    <Button
        android:id="@+id/exploreD_btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_btn_seguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/exploreD_txt_username" />

    <!--<Button
        android:id="@+id/unfollow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_btn_noseguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_text" />-->

</androidx.constraintlayout.widget.ConstraintLayout>