<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreFrag">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ph_user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/usr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="184dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ph_title_username" />

    <TextView
        android:id="@+id/nam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        app:layout_constraintEnd_toStartOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@id/usr1"
        tools:text="@string/ph_subtitle_user" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_btn_seguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img1"
        tools:layout_editor_absoluteY="16dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ph_user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/usr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img2"
        app:layout_constraintTop_toBottomOf="@+id/nam1"
        tools:text="@string/ph_title_username" />

    <TextView
        android:id="@+id/nam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usr2"
        tools:layout_editor_absoluteX="74dp"
        tools:text="@string/ph_subtitle_user" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ph_btn_seguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ph_user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/usr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/nam2"
        tools:text="@string/ph_title_username" />

    <TextView
        android:id="@+id/nam3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usr3"
        tools:layout_editor_absoluteX="74dp"
        tools:text="@string/ph_subtitle_user" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ph_btn_seguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />


</androidx.constraintlayout.widget.ConstraintLayout>